# customer_it_support

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run_all.bat  run_all.sh
notebooks/: reusable_features_app.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20250305_152732-l8mpjpna/: run-l8mpjpna.wandb
notebooks/wandb/run-20250305_152732-l8mpjpna/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20250305_153439-3vdyiyug/: run-3vdyiyug.wandb
notebooks/wandb/run-20250305_153439-3vdyiyug/files/: config.yaml  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20250305_155448-l7ncgkn3/: run-l7ncgkn3.wandb
notebooks/wandb/run-20250305_155448-l7ncgkn3/files/: config.yaml  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20250305_170041-uqkn9mxn/: run-uqkn9mxn.wandb
notebooks/wandb/run-20250305_170041-uqkn9mxn/files/: wandb-metadata.json
notebooks/wandb/run-20250305_180733-a80sk2xq/: run-a80sk2xq.wandb
notebooks/wandb/run-20250305_180733-a80sk2xq/files/: config.yaml  wandb-metadata.json  wandb-summary.json
notebooks/wandb/run-20250305_204839-0ury4d50/: run-0ury4d50.wandb
notebooks/wandb/run-20250305_204839-0ury4d50/files/: config.yaml  wandb-summary.json  (+1 more)
notebooks/wandb/run-20250305_210053-42w2ol3u/: run-42w2ol3u.wandb
saved_datasets/: data_examples.py
src/: config.py
src/api/: Dockerfile.api  main.py
src/backend/: evaluation.py  models.py  pipelines.py  preprocessing.py
src/ui/: Dockerfile.ui-gradio  Dockerfile.ui-streamlit  gradio_app.py  streamlit_app.py
src/utils/: devices.py  labels.py  paths.py  pydantic_models.py
(+3 files in other folders)
