[tool.poetry]
name = "customer_it_support"
version = "0.1.0"
description = ""
authors = ["nelsondressler <nelsondr58@gmail.com>"]
readme = "README.md"

# Declare all packages inside the src directory
packages = [
  { include = "backend", from = "src" },
  { include = "api", from = "src" },
  { include = "ui", from = "src" },
  { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
spacy = ">=3.8.4,<4.0.0"
wandb = ">=0.19.8,<0.20.0"
dotenv = ">=0.9.9,<0.10.0"
unicodedata2 = ">=16.0.0,<17.0.0"
pandas = ">=2.2.3,<3.0.0"
nltk = ">=3.9.1,<4.0.0"
"scikit-learn" = ">=1.6.1,<2.0.0"
certifi = ">=2025.1.31,<2026.0.0"
pydantic = ">=2.10.6,<3.0.0"
langdetect = ">=1.0.9,<2.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
torch = ">=2.6.0,<3.0.0"
transformers = ">=4.49.0,<5.0.0"
fastapi = { version = ">=0.100.0,<1.0.0", extras = ["standard"] }
gradio = ">=5.20.1,<6.0.0"
streamlit = "^1.43.1"
datasets = "^3.3.2"

[tool.poetry.scripts]
# start-gradio = "python src/ui/gradio_app.py"
# start-streamlit = "streamlit run src/ui/streamlit_app.py"
# start-api = "python -m uvicorn src.api.main:app --host=0.0.0.0 --port=8000 --reload"
start-all = "bash run_all.sh"
start-api = "uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload"
start-gradio = "ui.gradio_app:main"
start-streamlit = "scripts.run_streamlit:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^24.0"
flake8 = "^6.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
